k8s/queue/kafdrop-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafdrop
  namespace: queue
spec:
  type: NodePort
  ports:
    - port: 9000
      targetPort: 9000
      nodePort: 30900
  selector:
    app: kafdrop
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafdrop
  namespace: queue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafdrop
  template:
    metadata:
      labels:
        app: kafdrop
    spec:
      containers:
        - name: kafdrop
          image: obsidiandynamics/kafdrop
          ports:
            - containerPort: 9000
          livenessProbe:
            httpGet:
              path: /
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 9000
            initialDelaySeconds: 5
            periodSeconds: 30
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
